--- a/balcony.html
+++ b/balcony.html
@@ -487,37 +487,37 @@
             <div class="row d-flex m-auto">
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="acc__item cp" data-toggle="modal" data-target="#podok">
-                  <img src="img/acc-1.png" alt="" class="acc__img">
+                  <div class="acc__img"><img src="img/acc-1.png" alt=""></div>
                   <h4 class="acc__title">Подоконники</h4>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="acc__item cp" data-toggle="modal" data-target="#setki">
-                  <img src="img/acc-2.png" alt="" class="acc__img">
+                  <div class="acc__img"><img src="img/acc-2.png" alt=""></div>
                   <h4 class="acc__title">Москитные сетки</h4>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="acc__item cp" data-toggle="modal" data-target="#ruchki">
-                  <img src="img/acc-3.png" alt="" class="acc__img">
+                  <div class="acc__img"><img src="img/acc-3.png" alt=""></div>
                   <h4 class="acc__title">Ручки</h4>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="acc__item cp" data-toggle="modal" data-target="#ogran">
-                  <img src="img/acc-4.png" alt="" class="acc__img">
+                  <div class="acc__img"><img src="img/acc-4.png" alt=""></div>
                   <h4 class="acc__title">Ограничители<br>открывания</h4>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="acc__item cp" data-toggle="modal" data-target="#air">
-                  <img src="img/acc-5.png" alt="" class="acc__img">
+                  <div class="acc__img"><img src="img/acc-5.png" alt=""></div>
                   <h4 class="acc__title">Воздушные<br>клапаны</h4>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="acc__item cp" data-toggle="modal" data-target="#otkos">
-                  <img src="img/acc-6.png" alt="" class="acc__img">
+                  <div class="acc__img"><img src="img/acc-6.png" alt=""></div>
                   <h4 class="acc__title">Откосы и отливы</h4>
               </div>
             </div>
