--- a/index.html
+++ b/index.html
@@ -255,21 +255,21 @@
                           <img src="img/cost-1.jpg" alt="" class="cost__img">
                           <div class="cost__type d-flex">
                             <p class="cost__title">Лайт</p>
-                            <span class="cost__faq ml-auto">?</span>
+                            <span class="cost__faq ml-auto cp" data-toggle="modal" data-target="#call">?</span>
                           </div>
                         </div>
                         <div class="cost__item col-lg-4 col-md-4 col-sm-4 cp" id="plastic-standart-tab" data-toggle="tab" href="#plastic-standart" role="tab" aria-controls="plastic-standart" aria-selected="false">
                           <img src="img/cost-2.png" alt="" class="cost__img">
                           <div class="cost__type d-flex">
                             <p class="cost__title">Стандарт</p>
-                            <span class="cost__faq ml-auto">?</span>
+                            <span class="cost__faq ml-auto cp" data-toggle="modal" data-target="#call">?</span>
                           </div>
                         </div>
                         <div class="cost__item col-lg-4 col-md-4 col-sm-4 cp" id="plastic-premium-tab" data-toggle="tab" href="#plastic-premium" role="tab" aria-controls="plastic-premium" aria-selected="false">
                           <img src="img/cost-3.jpg" alt="" class="cost__img">
                           <div class="cost__type d-flex">
                             <p class="cost__title">Премиум</p>
-                            <span class="cost__faq ml-auto">?</span>
+                            <span class="cost__faq ml-auto cp" data-toggle="modal" data-target="#call">?</span>
                           </div>
                         </div>
                       </div>
