--- a/game-game-test/index.html
+++ b/game-game-test/index.html
@@ -335,7 +335,7 @@
                 </li>
             </ul>
         </div>
-        <div class="game-window" style="width: 1115px; height: 853px;" id="gamecontainer">
+        <div class="game-window" style="width: 722px; height: 552px;" id="gamecontainer">
                                                         
                             <object class="game-src" id="iplayer-game" style="z-index: 2; display:block!important; background-color:white" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" wmode="window" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="100%" height="100%">
                                 <param name="allowScriptAccess" value="sameDomain">
@@ -1508,7 +1508,7 @@
                         crossorigin="anonymous"></script-->
         <!--script src="/ui/js/owl/owl.carousel.min.js"></script-->
         <!--script src="/ui/js/jquery.nouislider.min.js"></script-->
-        <script src="./Game-Game_files/base_games.min.js.Без названия"></script>
+        <script src="Game-Game_files/base_games.min.js"></script>
     
 
 <script>
