--- a/clinic/doctors.html
+++ b/clinic/doctors.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/second.css">
 </head>
 <body>
-    <!-- <header>
+    <header>
 		<section>
 			<nav>
 					<div class="block-nav">
@@ -153,7 +153,7 @@
 					</div>
          </nav>
 		</section>
-   </header> -->
+   </header>
 
     <section class="breads">
         <div class="container">
