--- a/clinic/about.html
+++ b/clinic/about.html
@@ -11,17 +11,16 @@
     <link rel="stylesheet" href="css/simplebar.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/second.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
    <div class="menu-mobile mobileShow">
-      <a href="#" class="menu-mobile__link">Врачи</a>
+      <a href="doctors.html" class="menu-mobile__link">Врачи</a>
       <div class="accordion" id="accordionExample">
          <div class="card">
            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
              <h5 class="mb-0">
-               <a class="dropdown-arrow">
+               <a href="services.html" class="dropdown-arrow">
                  Услуги
                </a>
              </h5>
@@ -146,10 +145,10 @@
            </div>
          </div>
        </div>
-       <a href="#" class="menu-mobile__link">Цены</a>
-       <a href="#" class="menu-mobile__link">О Компании</a>
-       <a href="#" class="menu-mobile__link">Акции</a>
-       <a href="#" class="menu-mobile__link">Контакты</a>
+       <a href="price.html" class="menu-mobile__link">Цены</a>
+       <a href="about.html" class="menu-mobile__link">О Компании</a>
+       <a href="sale.html" class="menu-mobile__link">Акции</a>
+       <a href="contacts.html" class="menu-mobile__link">Контакты</a>
    </div>
     <header>
 		<section>
@@ -158,8 +157,8 @@
 						<img src="img/logo.png" alt="logo" class="logo">
 						<div class="menu" id="menus">
 							<ul class="nav">
-								<li>врачи</li>
-								<li id="serv" class="serv-menu dropdown">услуги <img src="img/arrow.svg" alt="" class="arrow-menu">
+								<li><a href="doctors.html">Врачи</a></li>
+								<li id="serv" class="serv-menu dropdown"><a href="services.html">Услуги</a> <img src="img/arrow.svg" alt="" class="arrow-menu">
 									<div class="pod-menu dropdown-menu" id="serv-pod-menu">
 										<div class="content-mini menus" id="menus">
 											<ul class="nav-two">
@@ -239,10 +238,10 @@
 											</ul>
 										</div>
 									</div></li>
-								<li>цены</li>
-								<li>о компании</li>
-								<li>акции</li>
-								<li>контакты</li>
+								<li><a href="price.html">Цены</a></li>
+								<li><a href="about.html">О компании</a></li>
+								<li><a href="sale.html">Акции</a></li>
+								<li><a href="contacts.html">Контакты</a></li>
 							</ul>
 						</div>
 						<div class="search">
