--- a/clinic/doctors.html
+++ b/clinic/doctors.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/simplebar.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/second.css">
+    <link rel="stylesheet" href="css/main.min.css">
+    
 </head>
 <body>
    <div class="menu-mobile mobileShow">
@@ -377,7 +377,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -406,7 +406,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -435,7 +435,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -464,7 +464,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -493,7 +493,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -522,7 +522,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -551,7 +551,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -580,7 +580,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
@@ -609,7 +609,7 @@
                   <a data-fancybox data-src="#popup-order" href="javascript:;" class="docs-member__btn full-btn">
                      Записаться на приём
                   </a>
-                  <a href="#" class="docs-member__btn empty-btn">
+                  <a href="doctor-card.html" class="docs-member__btn empty-btn">
                      Подробнее о враче
                   </a>
                </div>
