--- a/clinic/price.html
+++ b/clinic/price.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="css/simplebar.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/second.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
   <div class="menu-mobile mobileShow">
