--- a/clinic/services-card.html
+++ b/clinic/services-card.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="css/simplebar.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/second.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
 	<div class="menu-mobile mobileShow">
@@ -341,7 +340,7 @@
                             Речной вокзал / Беломорская
                           </div>
                     </div>
-                    <a href="#form-modal" class="btn">Записаться на приём</a>
+                    <a href="#" class="btn"  data-fancybox data-src="#popup-order" href="javascript:;">Записаться на приём</a>
                 </div>
 
                 <div class="banner">
@@ -648,7 +647,7 @@
                        <div class="doctors-member__subway doctors-member__subway_light">
                           Профсоюзная
                        </div>
-                       <a href="#" class="doctors-member__btn full-btn">
+                       <a href="#" class="doctors-member__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
                           Записаться на приём
                        </a>
                        <a href="#" class="doctors-member__btn empty-btn">
@@ -677,7 +676,7 @@
                        <div class="doctors-member__subway doctors-member__subway_dark">
                           Речной вокзал / Беломорская
                        </div>
-                       <a href="#" class="doctors-member__btn full-btn">
+                       <a href="#" class="doctors-member__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
                           Записаться на приём
                        </a>
                        <a href="#" class="doctors-member__btn empty-btn">
@@ -706,7 +705,7 @@
                        <div class="doctors-member__subway doctors-member__subway_light">
                           Профсоюзная
                        </div>
-                       <a href="#" class="doctors-member__btn full-btn">
+                       <a href="#" class="doctors-member__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
                           Записаться на приём
                        </a>
                        <a href="#" class="doctors-member__btn empty-btn">
@@ -735,7 +734,7 @@
                        <div class="doctors-member__subway doctors-member__subway_light">
                           Профсоюзная
                        </div>
-                       <a href="#" class="doctors-member__btn full-btn">
+                       <a href="#" class="doctors-member__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
                           Записаться на приём
                        </a>
                        <a href="#" class="doctors-member__btn empty-btn">
@@ -774,7 +773,7 @@
 					<span class="other-item__price-old">490 ₽</span>
 					330 ₽
 				 </p>
-				 <a href="#" class="other-item__btn full-btn">
+				 <a href="#" class="other-item__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
 					Записаться на услугу
 				 </a>
 				 <a href="#" class="other-item__btn empty-btn">
@@ -794,7 +793,7 @@
 				 <p class="other-item__price">
 					1 850 ₽
 				 </p>
-				 <a href="#" class="other-item__btn full-btn">
+				 <a href="#" class="other-item__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
 					Записаться на услугу
 				 </a>
 				 <a href="#" class="other-item__btn empty-btn">
@@ -814,7 +813,7 @@
 				 <p class="other-item__price">
 					13 960 ₽
 				 </p>
-				 <a href="#" class="other-item__btn full-btn">
+				 <a href="#" class="other-item__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
 					Записаться на услугу
 				 </a>
 				 <a href="#" class="other-item__btn empty-btn">
@@ -835,7 +834,7 @@
 					<span class="other-item__price-old">490 ₽</span>
 					330 ₽
 				 </p>
-				 <a href="#" class="other-item__btn full-btn">
+				 <a href="#" class="other-item__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
 					Записаться на услугу
 				 </a>
 				 <a href="#" class="other-item__btn empty-btn">
@@ -855,7 +854,7 @@
 				 <p class="other-item__price">
 					1 850 ₽
 				 </p>
-				 <a href="#" class="other-item__btn full-btn">
+				 <a href="#" class="other-item__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
 					Записаться на услугу
 				 </a>
 				 <a href="#" class="other-item__btn empty-btn">
@@ -875,7 +874,7 @@
 				 <p class="other-item__price">
 					13 960 ₽
 				 </p>
-				 <a href="#" class="other-item__btn full-btn">
+				 <a href="#" class="other-item__btn full-btn" data-fancybox data-src="#popup-order" href="javascript:;">
 					Записаться на услугу
 				 </a>
 				 <a href="#" class="other-item__btn empty-btn">
@@ -1127,6 +1126,29 @@
 			</div>
 		</div>
 	</footer>
+
+	<form action="#" data-selectable="true" class="popup-order" id="popup-order" style="display: none;">
+        <h3 class="popup-order__title">
+           Заказать звонок
+        </h3>
+        <input type="text" class="popup-order__input" placeholder="Имя">
+        <input type="tel" class="popup-order__input" placeholder="Телефон">
+        <p class="popup-order__note">
+           Нежимая на кнопку, вы даете согласие не обработку своих персональых дэнных
+        </p>
+        <button type="submit" class="popup-order__btn full-btn">
+           Перезвоните мне
+        </button>
+     </form>
+  
+     <form action="#" class="popup-success" id="popup-success" data-selectable="true" style="display: none;">
+        <h3 class="popup-success__title">
+           Форма принята!
+        </h3>
+        <p class="popup-success__text">
+           Мы перезвоним вам в ближайшее время
+        </p>
+     </form>
 
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js" type="text/javascript"></script>
