--- a/clinic/contacts.html
+++ b/clinic/contacts.html
@@ -158,7 +158,7 @@
 						<div class="menu" id="menus">
 							<ul class="nav">
 								<li><a href="doctors.html">Врачи</a></li>
-								<li id="serv" class="serv-menu dropdown"><a href="services.html">Услуги</a> <img src="img/arrow.svg" alt="" class="arrow-menu">
+								<li id="serv" class="serv-menu dropdown"><a href="services.html">Услуги</a><img src="img/arrow.svg" alt="" class="arrow-menu">
 									<div class="pod-menu dropdown-menu" id="serv-pod-menu">
 										<div class="content-mini menus" id="menus">
 											<ul class="nav-two">
@@ -304,7 +304,7 @@
         <div class="container">
            <div class="breadcrumbs">
               <span>
-                 <a href="#">Главная</a>
+                 <a href="index.html">Главная</a>
               </span>
               <span class="sep"> / </span>
               <span>Контакты</span>
